"Solar System": fix icon size on iOS
Fix one specific image distorting during CSS animation on iOS devices.

--- a/Solar_System/styles.css
+++ b/Solar_System/styles.css
@@ -166,6 +166,9 @@ body {
 .system__orbit--sun {
     max-height: 50px;
 }
+.system__orbit--sun img {
+    min-height: 34px; /*iOS*/
+}
 
 @media (max-width: 600px) {
 
